# airbnb-price-prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
app/: style.css
app/pages/: market_analysis.py  model_insights.py  neighbourhood_explorer.py  price_predictor.py
data/processed/: listings_clean.parquet
models/: benchmark_results.json  model_metadata.json  pipeline.joblib  shap_explainer.joblib
scripts/: train_model.py
src/data/: loader.py  preprocessor.py
src/features/: amenities.py  bathrooms.py  bedroom.py  constants.py  geo.py  host.py  temporal.py  text.py
src/models/: benchmark.py  evaluate.py  predict.py  train.py
