[project]
name = "airbnb-price-prediction"
version = "0.1.0"
description = "Edinburgh Airbnb Host Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "optuna>=3.6",
    "shap>=0.45",
    "streamlit>=1.35",
    "plotly>=5.20",
    "pydeck>=0.9",
    "pyarrow>=15.0",
    "joblib>=1.3",
    "textblob>=0.18",
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]